backend user endpoints. newuser page tested
